# ConsoleFormat

./: LICENSE  NOTICE  README.md  pyproject.toml
consoleformat/: __init__.py  consoleformat.py
